# pet-projects

./: README.md
calc/: CMakeLists.txt  README.md  calchandler.cpp  calchandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
image_processing/: README.md
tcp_chat/: .gitignore  README.md
tcp_chat/client/client/: CMakeLists.txt  config.cpp  config.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  network.ui  socket.cpp  socket.h
tcp_chat/client/config/: client.json
tcp_chat/server/conf/: server.json
tcp_chat/server/server/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  config.cpp  config.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  network.ui  server.cpp  server.h
university/: README.md
university/image_processing/: README.md
yandex-ml-4/: README.md
yandex-ml-4/1/: 01_attention.ipynb  02_hw_fmnist_classification.ipynb  README.md  template_p01.py
yandex-ml-4/2/: 01_crossentropy_method.ipynb  README.md  template_crossentropy.py
yandex-ml-4/3/: README.md  template_qlearning.py  Копия_блокнота__01_qlearning_ipynb_.ipynb
yandex-ml-4/4/: 01_reinforce.ipynb  README.md  template_reinforce.py
